# ambulance-routing

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-prod.txt  requirements.txt
.github/workflows/: python-ci.yml
api/: main.py  schemas.py
benchmarks/: benchmark.py  load_test.py
core/: config.py  graph.py  logging_config.py  routing.py  simulator.py
docs/: DEMO.md  PROJECT_EXPLAINED.md  architecture.md  benchmark_report.md
examples/: city_graph.json  sample_graph.json  traffic_snapshot.json
tests/: test_api.py  test_graph.py  test_routing.py  test_simulator.py
